crates/test-files/fixtures/compile_errors/struct_call_without_kw_args.fe
struct House:
    vacant: bool
    price: u256

contract Foo:

    pub fn bar():
        my_house: House = House(true, price=1000000)